fffff/backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fffff-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fffff-backend
  template:
    metadata:
      labels:
        app: fffff-backend
    spec:
      containers:
        - name: fffff-backend
          image: 'ghcr.io/darrelltang/fffff-backend:v0.1.13'
          readinessProbe:
            exec:
              command:
                - nc
                - -z
                - postgres
                - "5432"
            initialDelaySeconds: 5
            timeoutSeconds: 5
