fffff/postgres-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:12
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: sql-script
          mountPath: /docker-entrypoint-initdb.d
        - name: csv-volume
          mountPath: /csv
      volumes:
      - name: sql-script
        configMap:
          name: sql-script
      - name: csv-volume
        persistentVolumeClaim:
          claimName: csv-pvc
