fffff/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fffff-api
spec:
  selector:
    app: fffff-api
  ports:
  - name: fffff-api
    port: 80
    targetPort: 80
  type: ClusterIP
