fffff/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fffff
spec:
  selector:
    app: fffff-frontend
  ports:
  - name: http
    port: 80
    targetPort: 8080
  type: ClusterIP
